<resources>
    <string name="app_name">UHFDemo_V3.2</string>
    <string name="menu_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ipaddr">IP Addr:</string>
    <string name="ipport">Port:</string>
    <string name="version">Version:</string>
    <string name="dmin">MinFre:</string>
    <string name="band">Band:</string>
    <string name="dmax">MaxFre:</string>
    <string name="power">Power:</string>
    <string name="scantime">Scantime:</string>
    <string name="Connect">Connect</string>
    <string name="SerialPort">SerialPort:</string>
    <string name="BaudRate">BaudRate:</string>
    <string name="idno">ID</string>
    <string name="epcid">ID:</string>
    <string name="times">Times</string>
    <string name="rssi">RSSI</string>
    <string name="antenna">Antenna</string>
    <string name="ant1">ANT1</string>
    <string name="ant2">ANT2</string>
    <string name="ant3">ANT3</string>
    <string name="ant4">ANT4</string>
    <string name="ant5">ANT5</string>
    <string name="ant6">ANT6</string>
    <string name="ant7">ANT7</string>
    <string name="ant8">ANT8</string>
    <string name="ant9">ANT9</string>
    <string name="ant10">ANT10</string>
    <string name="ant11">ANT11</string>
    <string name="ant12">ANT12</string>
    <string name="ant13">ANT13</string>
    <string name="ant14">ANT14</string>
    <string name="ant15">ANT15</string>
    <string name="ant16">ANT16</string>
    <string name="number">Number:</string>
    <string name="ttime">Time(ms):</string>
    <string name="btscan">Scan</string>
    <string name="btstop">Stop</string>
    <string name="btstoping">Stoping</string>
    <string name="basicparam">Basic Parameter</string>
    <string name="scanparam">Inventory Parameter</string>
    <string name="modeparam">Active Mode Parameter</string>
    <string name="acmem">Query Type:</string>
    <string name="activemode">Active Mode</string>
    <string name="startAddr">Start Address:</string>
    <string name="ReadLen">Read Length:</string>
    <string name="qvalue">Q:</string>
    <string name="session">Session:</string>
    <string name="tidptr">TID Ptr:</string>
    <string name="tidlen">TID Len:</string>
    <string name="beepstr">Beep:</string>
    <string name="filtemestr">Filter Time:</string>
    <string name="getstr">Get</string>
    <string name="setstr">Set</string>
    <string name="txtepc">ID:</string>
    <string name="bankid">Bank:</string>
    <string name="memptr">Ptr:</string>
    <string name="memlen">Len:</string>
    <string name="pwdstr">Access Pwd:</string>
    <string name="readstr">ReadData:</string>
    <string name="writestr">WriteData:</string>
    <string name="butnread">Read</string>
    <string name="butnwrite">Write</string>
    <string name="butnwriteepc">WriteEPC</string>
    <string name="tab_scan">Scan</string>
    <string name="tab_rw">R/W</string>
    <string name="tab_cmd">CMD</string>
    <string name="tab_ivtparam">Param</string>
    <string name="power_error">Power set failed</string>
    <string name="beep_error">Beep set failed</string>
    <string name="frequent_error">Frequency set failed</string>
    <string name="antenna_error">Antenna set failed</string>
    <string name="get_success">Read Success</string>
    <string name="get_failed">Read Failed</string>
    <string name="btn_getstr">Get</string>
    <string name="btn_setstr">Set</string>
    <string name="write_failed">Write Failed</string>
    <string name="write_success">Write Success</string>
    <string name="info_result">Result:</string>
    <string name="info_search">Searching...</string>
    <string name="info_searchfinish">Search finished</string>
    <string name="info_mix">Mix</string>
    <string name="info_psw_length_error">Password length error</string>
    <string name="item_scan_type">Inventory Type</string>
    <string name="txt_scan_type">Type:</string>
    <string name="item_scan_condition">Mix/TID condition</string>
    <string-array name="men_select">
        <item>Reserve</item>
        <item>EPC</item>
        <item>TID</item>
        <item>User</item>
    </string-array>
    <string-array name="mode_select">
        <item>Answer Mode</item>
        <item>Active Mode</item>
        <item>Trigger Mode(H)</item>
        <item>Trigger Mode(L)</item>
    </string-array>
    <string-array name="type_select">
        <item>Reserve</item>
        <item>EPC</item>
        <item>TID</item>
        <item>User</item>
        <item>Mutiple</item>
        <item>Single</item>
    </string-array>
    <string-array name="men_filtime">
        <item>0*1s</item>
        <item>1*1s</item>
        <item>2*1s</item>
        <item>3*1s</item>
        <item>4*1s</item>
        <item>5*1s</item>
        <item>6*1s</item>
        <item>7*1s</item>
        <item>8*1s</item>
        <item>9*1s</item>
        <item>10*1s</item>
        <item>11*1s</item>
        <item>12*1s</item>
        <item>13*1s</item>
        <item>14*1s</item>
        <item>15*1s</item>
        <item>16*1s</item>
        <item>17*1s</item>
        <item>18*1s</item>
        <item>19*1s</item>
        <item>20*1s</item>
        <item>21*1s</item>
        <item>22*1s</item>
        <item>23*1s</item>
        <item>24*1s</item>
        <item>25*1s</item>
        <item>26*1s</item>
        <item>27*1s</item>
        <item>28*1s</item>
        <item>29*1s</item>
        <item>30*1s</item>
        <item>31*1s</item>
        <item>32*1s</item>
        <item>33*1s</item>
        <item>34*1s</item>
        <item>35*1s</item>
        <item>36*1s</item>
        <item>37*1s</item>
        <item>38*1s</item>
        <item>39*1s</item>
        <item>40*1s</item>
        <item>41*1s</item>
        <item>42*1s</item>
        <item>43*1s</item>
        <item>44*1s</item>
        <item>45*1s</item>
        <item>46*1s</item>
        <item>47*1s</item>
        <item>48*1s</item>
        <item>49*1s</item>
        <item>50*1s</item>
        <item>51*1s</item>
        <item>52*1s</item>
        <item>53*1s</item>
        <item>54*1s</item>
        <item>55*1s</item>
        <item>56*1s</item>
        <item>57*1s</item>
        <item>58*1s</item>
        <item>59*1s</item>
        <item>60*1s</item>
        <item>61*1s</item>
        <item>62*1s</item>
        <item>63*1s</item>
        <item>64*1s</item>
        <item>65*1s</item>
        <item>66*1s</item>
        <item>67*1s</item>
        <item>68*1s</item>
        <item>69*1s</item>
        <item>70*1s</item>
        <item>71*1s</item>
        <item>72*1s</item>
        <item>73*1s</item>
        <item>74*1s</item>
        <item>75*1s</item>
        <item>76*1s</item>
        <item>77*1s</item>
        <item>78*1s</item>
        <item>79*1s</item>
        <item>80*1s</item>
        <item>81*1s</item>
        <item>82*1s</item>
        <item>83*1s</item>
        <item>84*1s</item>
        <item>85*1s</item>
        <item>86*1s</item>
        <item>87*1s</item>
        <item>88*1s</item>
        <item>89*1s</item>
        <item>90*1s</item>
        <item>91*1s</item>
        <item>92*1s</item>
        <item>93*1s</item>
        <item>94*1s</item>
        <item>95*1s</item>
        <item>96*1s</item>
        <item>97*1s</item>
        <item>98*1s</item>
        <item>99*1s</item>
        <item>100*1s</item>
    </string-array>
    <string-array name="men_s">
        <item>S0</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
        <item>Auto</item>
    </string-array>
    <string-array name="men_q">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="men_tid">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
    </string-array>
    <string-array name="act_addr">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="act_len">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
    </string-array>
    <string name="btConfigDev">TCPIP Config</string>
</resources>