<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
   
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </LinearLayout>
    <ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:orientation="vertical" >
		<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
          
		 
         <!--频点设置 -->
         <TextView
            android:id="@+id/sd1"
            android:layout_width="fill_parent"
            android:background="@color/grayslate"
            android:text="@string/item_scan_type"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_height="35dp"/>
        
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:gravity="right"
               android:layout_gravity="center"
               android:layout_weight="1"
               android:text="@string/txt_scan_type" />

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="0dip"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="2"
                android:gravity="left"  />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </LinearLayout>

                
       
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </LinearLayout>
        
        
         <!--功率设置 -->
        <TextView
            android:id="@+id/sd101"
            android:layout_width="fill_parent"
            android:layout_height="5dp"/>
        
        <TextView
            android:id="@+id/sd102"
            android:layout_width="fill_parent"
            android:background="@color/grayslate"
            android:text="@string/antenna"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_height="35dp"/>
        
          <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </LinearLayout>
        
        
        <!--天线配置 -->
         <TextView
            android:id="@+id/sd18"
            android:layout_width="fill_parent"
            android:layout_height="5dp"/>
      
        <LinearLayout
            android:id="@+id/scanGroup1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

             <CheckBox
                    android:id="@+id/scanAnt1"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ant1" />

                <CheckBox
                    android:id="@+id/scanAnt2"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ant2" />

                 <CheckBox
                    android:id="@+id/scanAnt3"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ant3" />

                 <CheckBox
                    android:id="@+id/scanAnt4"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ant4" />

        </LinearLayout>

            <LinearLayout
                android:id="@+id/scanGroup2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/scanAnt5"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ant5" />

                <CheckBox
                    android:id="@+id/scanAnt6"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ant6" />

                <CheckBox
                    android:id="@+id/scanAnt7"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ant7" />

                <CheckBox
                    android:id="@+id/scanAnt8"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ant8" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/scanGroup3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/scanAnt9"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ant9" />

                <CheckBox
                    android:id="@+id/scanAnt10"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ant10" />

                <CheckBox
                    android:id="@+id/scanAnt11"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ant11" />

                <CheckBox
                    android:id="@+id/scanAnt12"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ant12" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/scanGroup4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/scanAnt13"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ant13" />

                <CheckBox
                    android:id="@+id/scanAnt14"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ant14" />

                <CheckBox
                    android:id="@+id/scanAnt15"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ant15" />

                <CheckBox
                    android:id="@+id/scanAnt16"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ant16" />

            </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </LinearLayout>
        
         <!--蜂鸣器配置 -->
         <TextView
            android:id="@+id/sd21"
            android:layout_width="fill_parent"
            android:layout_height="5dp"/>
        
        <TextView
            android:id="@+id/sd31"
            android:layout_width="fill_parent"
            android:background="@color/grayslate"
            android:text="@string/item_scan_condition"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_height="35dp"/>
      
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:gravity="right"
               android:layout_weight="1"
               android:text="@string/bankid" />

            <Spinner
                android:id="@+id/mixmem_spinner"
                android:layout_width="0dip"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="2"
                android:gravity="left"  />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:gravity="right"
               android:layout_weight="1"
               android:text="@string/memptr" />

            <Spinner
                android:id="@+id/start_spinner"
                android:layout_width="0dip"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="2"
                android:gravity="left"  />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:gravity="right"
               android:layout_weight="1"
               android:text="@string/memlen" />

            <Spinner
                android:id="@+id/count_spinner"
                android:layout_width="0dip"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="2"
                android:gravity="left"  />
        </LinearLayout>
        
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:gravity="right"
               android:layout_weight="1"
               android:text="@string/pwdstr" />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="0dip"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="2"
                android:text="00000000"
                android:gravity="left" />
        </LinearLayout>
        
        <!--写重复次数配置 -->
         <TextView
            android:id="@+id/sd41"
            android:layout_width="fill_parent"
            android:layout_height="5dp"/>
        
        <TextView
            android:id="@+id/sd51"
            android:layout_width="fill_parent"
            android:background="@color/grayslate"
            android:text="@string/scanparam"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_height="35dp"/>
      
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:gravity="right"
               android:layout_weight="1"
               android:text="@string/qvalue" />

            <Spinner
                android:id="@+id/qvalue_spinner"
                android:layout_width="0dip"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="2"
                android:gravity="left"  />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:gravity="right"
               android:layout_weight="1"
               android:text="Session:" />

            <Spinner
                android:id="@+id/session_spinner"
                android:layout_width="0dip"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="2"
                android:gravity="left"  />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:gravity="right"
               android:layout_weight="1"
               android:text="@string/scantime" />

            <Spinner
                android:id="@+id/scantime_spinner"
                android:layout_width="0dip"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="2"
                android:gravity="left"  />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:gravity="right"
               android:layout_weight="1"
               android:text="Target:" />

            <Spinner
                android:id="@+id/target_spinner"
                android:layout_width="0dip"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="2"
                android:gravity="left"  />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:gravity="right"
               android:layout_weight="1"
               android:text="A/B:" />

            <Spinner
                android:id="@+id/change_spinner"
                android:layout_width="0dip"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="2"
                android:gravity="left"  />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btGetParam"
                android:layout_width="0dip"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/color_button_selector"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/getstr" />

            <Button
                android:id="@+id/btSetParam"
                android:layout_width="0dip"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/color_button_selector"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/setstr" />
        </LinearLayout>
        
        <TextView
            android:id="@+id/sd3"
            android:layout_width="fill_parent"
            android:layout_height="10dp"/>
        
    </LinearLayout>

   </LinearLayout>
</ScrollView>
    
    

</LinearLayout>