<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient_bg">
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="1"
    android:gravity="center_vertical"
   >
    <LinearLayout
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		android:layout_marginTop="10sp"
		android:paddingLeft="10.0sp"
		android:paddingTop="5.0sp"
		android:paddingRight="10.0sp"
		android:paddingBottom="5.0sp">
		
		<TextView
			android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:gravity="center_vertical"
        	android:paddingLeft="4.0dip"
        	android:text="@string/ipaddr"
        	android:textColor="#ff222222" />

		<EditText
		    android:id="@+id/editIp"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:inputType="phone|number" 
		    android:text="192.168.2.250"
		    android:numeric="integer"   
            android:singleLine="true"  
		    android:ems="10" />
	</LinearLayout>
	
    <LinearLayout
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		android:layout_marginTop="10sp"
		android:paddingLeft="10.0sp"
		android:paddingTop="5.0sp"
		android:paddingRight="10.0sp"
		android:paddingBottom="5.0sp" >
		
		<TextView
			android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:gravity="center_vertical"
        	android:paddingLeft="4.0dip"
        	android:text="@string/ipport"
        	android:textColor="#ff222222"/>

		<EditText
		    android:id="@+id/editPort"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:inputType="phone|number" 
		    android:text="27011"
		    android:numeric="integer"   
            android:singleLine="true"  
		    android:ems="10" />

	</LinearLayout>
	</LinearLayout>
    <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
        android:orientation="vertical"
         android:layout_weight="1"
       >
	<TextView
	    android:id="@+id/textview_connecttcp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20.0sp"
		android:layout_marginTop="20.0sp"
		android:layout_marginRight="20.0sp"
		android:layout_marginBottom="5.0sp"
		android:paddingTop="10.0sp"
		android:paddingBottom="10.0sp"
		android:gravity="center_horizontal"
		android:background="@drawable/color_button_selector"
		android:text="@string/Connect"
		android:textColor="#ff222222"
		android:textStyle="bold"
		android:clickable="true" />
	
	<TextView
	    android:id="@+id/textview_search"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20.0sp"
		android:layout_marginTop="20.0sp"
		android:layout_marginRight="20.0sp"
		android:layout_marginBottom="5.0sp"
		android:paddingTop="10.0sp"
		android:paddingBottom="10.0sp"
		android:gravity="center_horizontal"
		android:background="@drawable/color_button_selector"
		android:text="@string/btConfigDev"
		android:textColor="#ff222222"
		android:textStyle="bold"
		android:clickable="true" />
</LinearLayout>
</LinearLayout>

